# Trig

./: .gitignore  BuildLinux.sh  BuildWindows.bat  CMakeLists.txt  README.md
Examples/: CMakeLists.txt
Examples/source/: main.cpp
Tests/: CMakeLists.txt
Tests/source/: main.cpp
include/Trig++/: Angle.hpp  Angle.inl  Degrees.hpp  Degrees.inl  Radians.hpp  Radians.inl  Trig++.hpp
